GRADLE-858, GRADLE-1261 - Some wrapper changes: - Use gradle.artifactoryonline.com instead of dist.codehaus.org as the default download location - Download from '/gradle/distributions' for release versions and '/gradle/distributions/gradle-snapshots' for snapshot versions. - Deprecated Wrapper.urlRoot, archiveName and archiveClassifier and replaced with distributionUrl. - Replaced several gradle-wrapper.properties entries with 'distributionUrl' entry.